[package]
name = "resultats"
version = "0.1.1"
edition = "2024"
description = "A result facility to handle multiple errors."
repository = "https://github.com/ide-outils/resultats"
license = "MIT OR Apache-2.0"


[dependencies]
proc-macro2 = { version = "1.0.106", features = ["span-locations"] }
syn = { version = "2.0.117", features = ["full", "parsing", "printing", "visit"], default-features = false }
